# tap-workday-raas

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.py
.circleci/: config.yml
tap_workday_raas/: __init__.py  client.py  discover.py  sync.py  transform.py
tests/: test_workday_raas_sync.py
tests/unittests/: discovery_tests.py  test_discovery.py  test_transform_bool.py
